--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -3,14 +3,14 @@ layout: default
 ---
 
 <article class="portfolio">
-  <h1>{{ page.title }}</h1>
+  <h1>{{ portfolio.title }}</h1>
 
   <div class="entry">
     {{ content }}
   </div>
 
   <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
+    Written on {{ portfolio.date | date: "%B %e, %Y" }}
   </div>
 
   {% include disqus.html %}
