--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -11,4 +11,4 @@
 {% if site.footer-links.stackoverflow %}<a href="http://stackoverflow.com/{{ site.footer-links.stackoverflow }}"><i class="svg-icon stackoverflow"></i></a>{% endif %}
 {% if site.footer-links.youtube %}<a href="https://youtube.com/{{ site.footer-links.youtube }}"><i class="svg-icon youtube"></i></a>{% endif %}
 {% if site.footer-links.googleplus %}<a href="https://plus.google.com/{{ site.footer-links.googleplus }}"><i class="svg-icon googleplus"></i></a>{% endif %}
-{% if site.footer-links.googlescholar %}<a href="https://scholar.google.com/citations?user=iVqqqVkAAAAJ&hl=en&oi=ao"><i class="https://raw.githubusercontent.com/SD-Suman/SD-Suman.github.io/de77bce752d72608975219e6489aee181015cc9c/images/googlescholar.svg"></i></a>{% endif %}
+{% if site.footer-links.googlescholar %}<a href="https://scholar.google.com/citations?user=iVqqqVkAAAAJ&hl=en&oi=ao"><i class="svg-icon google scholar"></i></a>{% endif %}
